--- a/style.css
+++ b/style.css
@@ -73,3 +73,9 @@ blockquote > #opsL{text-align:right;font-size:11px;font-weight:400;line-height:0
 .fa-snowflake {opacity:.3;color:white;font-size: 20px;position: absolute;animation:  heartMove linear 1;top: -10vh;z-index: 0;}
 @keyframes heartMove {0%{transform: translateY(-10vh) ;} 100%{transform: translateY(100vh) ;}}
 .sembunyi, #pesanditolak > *, #kado2, #kado3{display:none !important}
+
+<style type="text/css">
+	#gradient2 {
+	  background-image: linear-gradient(to right, #4682B4, #00FFFF, #00FA9A);
+	}
+</style>
