--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 --gaya-font2: 'Dancing Script', sans-serif;
 }
 @keyframes fanim {0% {background-position: 0% 0%;}25% {background-position: 100% 100%;} 50% {background-position: 0% 100%;} 75% {background-position: 50% 50%;} 100% {background-position: 0% 0%;}}
-body{background-color:#000;background-image: linear-gradient(to right, #4682B4, #00FFFF, #00FA9A);font-family:var(--gaya-font);padding: 20px 25px;-webkit-user-select: none; -ms-user-select: none; user-select: none;} a{text-decoration:none;}
+body{background-image: linear-gradient(to right, #4682B4, #00FFFF, #00FA9A);font-family:var(--gaya-font);padding: 20px 25px;-webkit-user-select: none; -ms-user-select: none; user-select: none;} a{text-decoration:none;}
 body::before{content:"\00A9  Farizd | PalingIT";color:white;font-size:10px;position:fixed;bottom:25px;right:25px;z-index:2}
 #bodyblur{opacity:0;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.3);transition:all 1s ease;} 
 #wallpaper{width:100%;height:100%;transform: scale(2);transition:all 1.3s ease;}
@@ -73,9 +73,3 @@ blockquote > #opsL{text-align:right;font-size:11px;font-weight:400;line-height:0
 .fa-snowflake {opacity:.3;color:white;font-size: 20px;position: absolute;animation:  heartMove linear 1;top: -10vh;z-index: 0;}
 @keyframes heartMove {0%{transform: translateY(-10vh) ;} 100%{transform: translateY(100vh) ;}}
 .sembunyi, #pesanditolak > *, #kado2, #kado3{display:none !important}
-
-<style type="text/css">
-	#gradient2 {
-	  background-image: linear-gradient(to right, #4682B4, #00FFFF, #00FA9A);
-	}
-</style>
